demo/policy.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: check-deployment-labels
spec:
  evaluation:
    background:
      enabled: false
    admission:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments"]
  variables:
    - name: response
      expression: >-
        http.Get('http://policy-reporter.policy-reporter:8080/v2/namespace-scoped/results?namespaces=default')
  validations:
    - expression: "variables.response.items[0].namespace == 'default'"
      message: "Deployment labels must be env=prod"
